--- a/app/src/main/res/layout/activity_begin_page.xml
+++ b/app/src/main/res/layout/activity_begin_page.xml
@@ -10,9 +10,12 @@
         android:id="@+id/textView"
         android:layout_width="227dp"
         android:layout_height="18dp"
-        android:text="Begin page"
+        android:text="Welcome to Healthy Assistant"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.179" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
