--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -34,11 +34,12 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 
-
-    <ScrollView
+    <LinearLayout
         android:id="@+id/scrollView2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,95 +53,148 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="32dp"
                 android:layout_marginTop="32dp"
-                android:layout_marginEnd="32dp"
                 android:orientation="vertical">
 
 
-
-                <EditText
-                    android:id="@+id/login_username"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="16dp"
-                    android:background="@drawable/edittext_background"
-                    android:ems="10"
-                    android:hint="Enter Your Username Here"
+                    android:background="@drawable/edittext_background">
 
-                    android:inputType="textPersonName"
-                    android:paddingLeft="10dp"
-                    android:textColorHint="#f5f5f5"
-                    android:textSize="16sp" />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/email_icon"></ImageView>
+
+                    <EditText
+                        android:id="@+id/login_username"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:ems="10"
+                        android:hint="Enter Your Username Here"
+                        android:inputType="textPersonName"
+                        android:textColorHint="#0B4654"
+                        android:textSize="16sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/edittext_background">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/password_img"></ImageView>
+
+                    <EditText
+                        android:id="@+id/login_psw"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:ems="10"
+                        android:hint="Enter Your Password Here"
+                        android:inputType="textPassword"
+                        android:paddingLeft="10dp"
+                        android:textColorHint="#0B4654"
+                        android:textSize="16sp" />
+                </LinearLayout>
+
+
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="32dp"
-                android:layout_marginEnd="32dp"
                 android:orientation="vertical">
 
-
-                <EditText
-                    android:id="@+id/login_psw"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="16dp"
-                    android:background="@drawable/edittext_background"
-                    android:ems="10"
-                    android:hint="Enter Your Password Here"
-                    android:inputType="textPassword"
-                    android:paddingLeft="10dp"
-                    android:textColorHint="#f5f5f5"
-                    android:textSize="16sp" />
                 <CheckBox
                     android:id="@+id/login_remember"
-                    android:layout_width="327dp"
-                    android:layout_height="46dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_marginTop="10dp"
                     android:padding="10dp"
                     android:text="Remember Me"
-                    android:textColor="@color/black"
+                    android:textColor="#0B4654"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/login_psw"
-                    app:layout_constraintWidth_percent=".8" />
+                    app:layout_constraintTop_toBottomOf="@+id/login_psw" />
 
-                <View
+
+                <Button
+                    android:id="@+id/login_btn_login"
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="@android:color/black"/>
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/btn_background"
+                    android:text="Login"
+                    android:textColor="#ffffff"
+                    android:textSize="18sp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp">
+
+                    <View
+                        android:layout_width="145dp"
+                        android:layout_height="1dp"
+                        android:layout_marginTop="15dp"
+                        android:background="@android:color/black" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="10dp"
+                        android:text="OR"
+                        android:textSize="20dp"
+                        android:textStyle="bold"></TextView>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginRight="0dp"
+                        android:background="@android:color/black" />
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <Button
+                        android:layout_width="160dp"
+                        android:layout_height="70dp"
+                        android:layout_weight="1.0"
+                        android:background="@drawable/facebook_btn" />
+
+                    <Button
+                        android:layout_width="160dp"
+                        android:layout_height="70dp"
+                        android:layout_weight="1.0"
+
+                        android:layout_marginLeft="8dp"
+                        android:background="@drawable/google_btn" />
+
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/login_btn_sign"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:background="@drawable/btn_background"
+                    android:text="Register"
+                    android:textColor="#ffffff"
+                    android:textSize="18sp" />
+
 
             </LinearLayout>
-
-
-
-            <Button
-                android:id="@+id/login_btn_login"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="32dp"
-                android:background="@drawable/btn_background"
-                android:text="Login"
-                android:textColor="#ffffff"
-                android:textSize="18sp" />
-            <Button
-                android:id="@+id/login_btn_sign"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="32dp"
-                android:background="@drawable/btn_background"
-                android:text="Register"
-                android:textColor="#ffffff"
-                android:textSize="18sp" />
         </LinearLayout>
-    </ScrollView>
+
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
