--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -64,6 +64,7 @@
                     android:layout_height="match_parent"
                     android:ems="10"
                     android:hint="Enter Your Username Here"
+                    android:backgroundTint="@color/white"
                     android:inputType="textPersonName"
                     android:textColorHint="#0B4654"
                     android:textSize="16sp" />
@@ -89,6 +90,8 @@
                     android:ems="10"
                     android:hint="Enter Your Username Here"
                     android:inputType="textPersonName"
+                    android:backgroundTint="@color/white"
+
                     android:textColorHint="#0B4654"
                     android:textSize="16sp" />
             </LinearLayout>
@@ -113,6 +116,8 @@
                     android:ems="10"
                     android:hint="Enter Your Password Here"
                     android:inputType="textPassword"
+                    android:backgroundTint="@color/white"
+
                     android:paddingLeft="10dp"
                     android:textColorHint="#0B4654"
                     android:textSize="16sp" />
@@ -137,6 +142,8 @@
                     android:layout_height="match_parent"
                     android:ems="10"
                     android:hint="Repeat Your Password Here"
+                    android:backgroundTint="@color/white"
+
                     android:inputType="textPassword"
                     android:paddingLeft="10dp"
                     android:textColorHint="#0B4654"
@@ -179,23 +186,24 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
-                <Button
+                <androidx.appcompat.widget.AppCompatButton
                     android:layout_width="160dp"
                     android:layout_height="70dp"
                     android:layout_weight="1.0"
+                    android:layout_marginLeft="8dp"
+
                     android:background="@drawable/facebook_btn" />
 
-                <Button
+                <androidx.appcompat.widget.AppCompatButton
                     android:layout_width="160dp"
                     android:layout_height="70dp"
                     android:layout_weight="1.0"
-
                     android:layout_marginLeft="8dp"
                     android:background="@drawable/google_btn" />
 
             </LinearLayout>
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/login_btn_sign"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
