--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -72,6 +72,8 @@
                         android:layout_height="match_parent"
                         android:ems="10"
                         android:hint="Enter Your Username Here"
+                        android:backgroundTint="@color/white"
+
                         android:inputType="textPersonName"
                         android:textColorHint="#0B4654"
                         android:textSize="16sp" />
@@ -94,6 +96,8 @@
                         android:layout_height="match_parent"
                         android:ems="10"
                         android:hint="Enter Your Password Here"
+                        android:backgroundTint="@color/white"
+
                         android:inputType="textPassword"
                         android:paddingLeft="10dp"
                         android:textColorHint="#0B4654"
@@ -121,7 +125,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/login_psw" />
 
 
-                <Button
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/login_btn_login"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -164,23 +168,24 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
-                    <Button
+                    <androidx.appcompat.widget.AppCompatButton
                         android:layout_width="160dp"
                         android:layout_height="70dp"
                         android:layout_weight="1.0"
-                        android:background="@drawable/facebook_btn" />
-
-                    <Button
-                        android:layout_width="160dp"
-                        android:layout_height="70dp"
-                        android:layout_weight="1.0"
-
                         android:layout_marginLeft="8dp"
-                        android:background="@drawable/google_btn" />
+                        android:background="@drawable/facebook_btn"/>
+
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:layout_width="160dp"
+                        android:layout_height="70dp"
+                        android:layout_weight="1.0"
+                        android:layout_marginLeft="8dp"
+                        android:background="@drawable/google_btn"/>
 
                 </LinearLayout>
 
-                <Button
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/login_btn_sign"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
