--- a/app/src/main/res/layout/fragment_exercise.xml
+++ b/app/src/main/res/layout/fragment_exercise.xml
@@ -6,10 +6,31 @@
     tools:context=".ExerciseFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="exercise"
-        android:textSize="96sp"/>
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Start Exericse Now"
+            android:layout_gravity="center"
+            android:textColor="@color/black"
+            android:textSize="35sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/running"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/exercise_running"
+            android:background="@drawable/exercise_container">
+        </ImageView>
+    </LinearLayout>
+
 
 </FrameLayout>
