--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,33 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     tools:context=".HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
     <LinearLayout
-        android:layout_width="410dp"
+        android:layout_width="411dp"
         android:layout_height="110dp"
         android:layout_marginBottom="568dp"
-        android:background="#8883F0"
         android:alpha="0.7"
-        
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent">
+        android:background="@drawable/top_info_main"
+        android:orientation="horizontal">
 
+        <ImageView
+            android:id="@+id/InfoMain"
+            android:layout_width="345dp"
+            android:layout_height="93dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginTop="15dp"
+            android:clickable="true"
+            android:src="@drawable/welcome_home" />
+
+        <ImageView
+            android:id="@+id/Ring"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="15dp"
+            android:layout_weight="1"
+            android:clickable="true"
+            android:src="@drawable/ring_main" />
 
     </LinearLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text=""
-        android:textSize="96sp" />
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="370dp"
+        android:layout_height="165dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="130dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/target_main_pic"
+        android:clickable="true" />
+
+    <ImageView
+        android:id="@+id/SetTar"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="145dp"
+        android:layout_marginLeft="325dp"
+        android:clickable="true"
+        android:src="@drawable/setting_target_main" />
+
 
 </FrameLayout>
