--- a/app/src/main/res/drawable/news1_main.xml
+++ b/app/src/main/res/drawable/news1_main.xml
@@ -2,7 +2,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item>
-
+        <shape>
+            <stroke
+            android:width="1dp"
+            android:color="@color/black" />
+        </shape>
     </item>
 
 </selector>
