--- a/app/src/main/res/layout/user_msg.xml
+++ b/app/src/main/res/layout/user_msg.xml
@@ -7,11 +7,13 @@
     android:layout_gravity="end"
     android:layout_margin="5dp"
     android:elevation="8dp"
-    app:cardCornerRadius="8dp">
+    >
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/user_message_background"
+
         android:orientation="horizontal">
 
         <!--text view for displaying user message-->
@@ -23,7 +25,7 @@
             android:layout_margin="5dp"
             android:padding="3dp"
             android:text="User message"
-            android:textColor="@color/black" />
+            android:textColor="@color/white" />
 
         <!--we are displaying user icon-->
         <ImageView
