登录注册已完成，健康页跳转完成

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -88,7 +88,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:ems="10"
-                    android:hint="Enter Your Username Here"
+                    android:hint="Enter Your Email Here"
                     android:inputType="textPersonName"
                     android:backgroundTint="@color/white"
 
@@ -110,7 +110,7 @@
                 </ImageView>
 
                 <EditText
-                    android:id="@+id/login_psw"
+                    android:id="@+id/register_psw"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:ems="10"
@@ -224,6 +224,7 @@
                     android:layout_height="wrap_content"
                     android:text="Already have account?"/>
                 <TextView
+                    android:id="@+id/register_return"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Login"
