--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -67,11 +67,11 @@
                         android:src="@drawable/email_icon"></ImageView>
 
                     <EditText
-                        android:id="@+id/login_username"
+                        android:id="@+id/login_email"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:ems="10"
-                        android:hint="Enter Your Username Here"
+                        android:hint="Enter Your Email Here"
                         android:backgroundTint="@color/white"
 
                         android:inputType="textPersonName"
@@ -186,7 +186,7 @@
                 </LinearLayout>
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/login_btn_sign"
+                    android:id="@+id/login_btn_register"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
