--- a/app/src/main/res/layout/fragment_health.xml
+++ b/app/src/main/res/layout/fragment_health.xml
@@ -26,7 +26,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_search"/>
-            <EditText
+            <TextView
                 android:id="@+id/health_search_bar_edittext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -50,15 +50,18 @@
             android:layout_marginLeft="16dp"
             android:orientation="horizontal">
         <ImageView
+            android:id="@+id/health_img_hypertension"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:src="@drawable/hypertension">
         </ImageView>
             <LinearLayout
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
             <TextView
+                android:id="@+id/health_text_hypertension"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="20dp"
@@ -145,6 +148,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <ImageView
+                android:id="@+id/health_contact"
                 android:layout_width="160dp"
                 android:layout_height="160dp"
                 android:src="@drawable/doctor_emmit"/>
