--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".ProfileFragment">
 <LinearLayout
+    android:paddingHorizontal="30dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -186,10 +187,14 @@
         </LinearLayout>
     </LinearLayout>
 
-    <View
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/profile_record"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_height="wrap_content"
+        android:background="@drawable/btn_background"
+        android:text="Record"
+        android:textColor="#ffffff"
+        android:textSize="18sp" />
 
     <View
         android:layout_width="match_parent"
