--- a/app/src/main/res/layout/activity_exercise_detail.xml
+++ b/app/src/main/res/layout/activity_exercise_detail.xml
@@ -16,35 +16,55 @@
             android:layout_height="300dp"
             android:src="@drawable/running_map"></ImageView>
 
-        <TextView
+        <Chronometer
+            android:id="@+id/c_meter"
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:text="00:37:13"
             android:textSize="20dp" />
-
-        <TextView
+        <LinearLayout
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:text="4.67Km"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tv_stepsTaken"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="0"
+                android:textColor="#8883F0"
+                android:textSize="32dp"
+                android:textStyle="bold" />
+            <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:text=" Steps"
             android:textColor="#8883F0"
             android:textSize="32dp"
             android:textStyle="bold" />
+        </LinearLayout>
+
 
         <LinearLayout
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
             <RelativeLayout
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/exercise_container">
 
                 <TextView
+                    android:id="@+id/exercise_avg_pace"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -62,12 +82,14 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_marginLeft="20dp"
                 android:background="@drawable/exercise_container">
 
                 <TextView
+
+                    android:id="@+id/exercise_calories"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -86,27 +108,29 @@
             </RelativeLayout>
         </LinearLayout>
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="191dp"
-            android:src="@drawable/heart_beat_img" />
+
 
         <RelativeLayout
+            android:layout_marginTop="20dp"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn"
                 android:layout_width="160dp"
                 android:layout_height="60dp"
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="30dp"
                 android:layout_marginLeft="8dp"
+                android:text="@string/start"
                 android:background="@drawable/btn_exercise_pause"
-                android:text="Pause"
+
                 android:textColor="@color/white" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/exercise_btn_stop"
                 android:layout_width="160dp"
                 android:layout_height="60dp"
                 android:layout_alignParentEnd="true"
