--- a/app/src/main/res/layout/activity_more_information_signin.xml
+++ b/app/src/main/res/layout/activity_more_information_signin.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".more_information_signin">
 <LinearLayout
+    android:paddingHorizontal="30dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
