--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -64,7 +64,7 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/email_icon"></ImageView>
+                        android:src="@drawable/email_icon"/>
 
                     <EditText
                         android:id="@+id/login_email"
@@ -88,7 +88,7 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/password_img"></ImageView>
+                        android:src="@drawable/password_img"/>
 
                     <EditText
                         android:id="@+id/login_psw"
