--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,11 @@
     tools:context=".HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
+</ScrollView>
     <LinearLayout
         android:layout_width="411dp"
         android:layout_height="110dp"
